--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.0",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.181",
     "sass": "^1.49.9"
   }
 }
