refactoring files structures

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,5 @@
 REACT_APP_URL_BASE="http://localhost/software_store_api/apis/v1";
 
+
+HOST_USER_SERVER_BETA="famehouze-beta";
+HOST_PASS_SERVER_BETA="AQzXD@M7vPKM7fCmrsj1";
