--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -11,13 +12,15 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "axios": "^0.26.0",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.181",
+    "@types/styled-components": "^5.1.26",
     "sass": "^1.49.9"
   }
 }
